// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`destroy a subroot while another component is mounted in main app 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  const comp1 = app.createComponent(\`ChildB\`, true, false, false, []);
  const comp2 = app.createComponent(\`ChildA\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    if (ctx['state'].flag) {
      b2 = comp1({}, key + \`__1\`, node, this, null);
    } else {
      b3 = comp2({}, key + \`__2\`, node, this, null);
    }
    return multi([b2, b3]);
  }
}"
`;

exports[`destroy a subroot while another component is mounted in main app 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  let { createRef } = helpers;
  
  let block3 = createBlock(\`<div block-ref="0"/>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = text(\`a\`);
    let ref1 = createRef(ctx['this'].ref);
    const b3 = block3([ref1]);
    return multi([b2, b3]);
  }
}"
`;

exports[`destroy a subroot while another component is mounted in main app 3`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`c\`);
  }
}"
`;

exports[`destroy a subroot while another component is mounted in main app 4`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`b\`);
  }
}"
`;

exports[`subroot can create a root in a setup function, then use a hook 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`a\`);
  }
}"
`;

exports[`subroot can create a root in a setup function, then use a hook 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`c\`);
  }
}"
`;

exports[`subroot can mount subroot 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>main app</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`subroot can mount subroot 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>sub root</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`subroot can mount subroot inside own dom 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>main app</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`subroot can mount subroot inside own dom 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>sub root</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`subroot subcomponents can be destroyed, and it properly cleanup the subroots 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>main app</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`subroot subcomponents can be destroyed, and it properly cleanup the subroots 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>sub root</div>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;
